--- a/Online Regime Change Detection.Rmd
+++ b/Online Regime Change Detection.Rmd
@@ -24,7 +24,7 @@ library(gt)
 
 # Introduction
 
-This analysis is my contribution to a larger Cal Poly MSBA captstone project in support of a large North American Utilities company. Our group was tasked with detecting significant changes in constraint flow beyond normal seasonality also known as **regime changes.** This model leverages an R package that uses Bayesian probabilities to detect changes in time-series data in real-time( a.k.a "online").
+This analysis is my contribution to a larger Cal Poly MSBA capstone project in support of a large North American Utilities company. Our group was tasked with detecting significant changes in constraint flow beyond normal seasonality also known as **regime changes.** This model leverages an R package that uses Bayesian probabilities to detect changes in time-series data in real-time( a.k.a "online").
 
 The data used in this demonstration is an extract of historical provided by the client for a single constraint. Any geographical labels or names have been removed to maintain confidentiality. Only the knitted html is available at the request of the client.
 
@@ -115,6 +115,8 @@ head(df, n=10)
 
 # Exploring the Constraint Data
 
+#### Plotting the Whole Dataset
+
 Since this is all historical data, we will need to simulate how this would work in real time. First, we need to find a regime change in the past that we will try and detect. Lets look at a plot of the constraint time-series data with constraint_flow on the y-axis and DateTime on the x axis.
 
 In the graph below, the blue line is the constraint_flow variable and the orange line is rate_b. Remember, rate_b is the upper threshold of constraint_flow before problems arise.
@@ -128,6 +130,8 @@ Right at the start of 2022, there appears to be a huge shift in constraint flow 
 
 This is a good example of what this model is looking to detect, so this is the time period that will be simulated. We don't need all of the data prior to the expected change so we will progress with only data from 2021 and beyond.
 
+#### Filtering out Dates Before 2021
+
 ```{r}
 df = df %>%
   filter(
@@ -138,20 +142,46 @@ df %>%
   ggplot() + geom_line(aes(x = DateTime, y = constraint_flow), color = 'blue') + geom_line(aes(x = DateTime, y = rate_b), color = 'orange') + labs(x = 'Date', y = 'Constraint Flow')
 ```
 
-# Bayesian Online Change Point Detection
+# Bayesian Online Change Point Detection Workflow
+
+The onlineBcp package is using Bayesian probabilities to determine if an observation is a change based on previous observations. In other words, you can think of this function processing the time-series data from left to right only. It is not using future data to determine change points like some other methods may use. This is what allows this method to detect changes in real-time.
+
+#### Running the Model
+
+For this section, the whole time-series data set will be passed in to showcase how it is working under the hood. In the real world, new data would be appended periodically and the function would be ran after each append to looking for new changes.
+
+The constraint_flow variable is passed into the online_cp function and the th_cp parameter is set to 0.98. Th_cp is the uper threshold of probability for the data point to be classified as a change point. In other words, only the points that have a greater than or equal to 98% chance of being a change point are classified. This allows the model to highlight only very large changes that are indicative of regime change.
+
+```{r, results='hide'}
+# Run online_cp function on df with threshold set to 0.98
+ocp <- online_cp(df$constraint_flow, th_cp = 0.98)
+# Assigning results to ocp_summary
+ocp_summary <- summary(ocp)
+```
+
+Plotting the output of the function shows us where each change point is occurring and draws a line through the mean of each resulting segment.
 
 ```{r}
-ocp <- online_cp(df$constraint_flow, th_cp = 0.98)
-
-ocp_summary <- summary(ocp)
-
+# Show onlineBcp plot
 plot(ocp_summary)
 ```
 
+The output also provides a table of summary statistics for each segment, including the rows where they start and end. Running post-processing on this table is what allows us to determine where the especially large changes are occurring.
+
 ```{r}
- table <- as.data.frame(ocp_summary$result[[2]])
+# Show results table
+ocp_summary$result[[2]]
+```
+
+#### Post-processing
+
+To compare the segments, Cohen's D is calculated for each segment. The higher the D value, the more different they are to the previous segment.
+
+```{r}
+# Calculating Cohen's D and time in Months for each segment
+table <- as.data.frame(ocp_summary$result[[2]])
  
- table <- table %>%
+table <- table %>%
     mutate(
       Months = (as.numeric(as.duration(df$DateTime[table$end] -  df$DateTime[table$begin]) / ddays(1)))/30.44,
       CohenD = (abs(lag(mean) - mean)) / sqrt((SD^2 + lag(SD)^2)/2)
@@ -160,7 +190,11 @@ plot(ocp_summary)
 table
 ```
 
+To find changes indicative of regime change, we are looking for changes that are greater than or equal to a D value of 2. If it meets that requirement, a new variable titled 'LargeChange' will be assigned to TRUE. By filtering the rows to where LargeChange is TRUE, we now get a table with the most significant changes and the rows they start on.
+
 ```{r}
+
+# Filtering out large changes, CohenD >= 2
 table2 <- table %>%
   mutate(
       LargeChange = case_when(
@@ -175,6 +209,8 @@ table2 <- table %>%
   )
 table2
 ```
+
+Using the 'begin' column, the data can be cut and binned between each change point to form individual regimes.
 
 ```{r}
  # Assign regime change points
@@ -196,28 +232,48 @@ bins <- cut(x = 1:length(df[['constraint_flow']]), breaks = intervals,
 df$Regime <- bins
 ```
 
+#### Final Results
+
+Plotting the data set and assigning color based on regime shows us the final result.
+
 ```{r}
 df %>%
   ggplot() + geom_line(aes(x = DateTime, y = constraint_flow, color = Regime)) + geom_line(aes(x = DateTime, y = rate_b), color = 'orange') + labs(x = 'Date', y = 'Constraint Flow')
 ```
 
+With the data binned, summary statistics can be calculated for each regime.
+
+```{r}
+df %>% 
+  group_by(Regime) %>%
+  summarise("Regime Start" = min(DateTime), "Regime End" = max(DateTime), "Mean Constraint Flow" = mean(constraint_flow), "Standard Deviation" = sd(constraint_flow))
+```
+
+The method was successful in identifying the regime change that was suspecting earlier in this analysis. However, it also picked up a third regime where constraint_flow is equal to 0. This is likely a measurement error and can be ignored.
+
 # Simulating A Real World Use Case
 
-```{r, echo=FALSE}
+To simulate how this can be deployed in the real world, a function was created that contains all the steps of the previous workflow. Starting with one year of data, one month will be added at a time right when the regime change happens, simulating the model picking up the change as it would have happened in the past.
+
+```{r}
 online_constraint_flow <- function(df){
-  
+
+# Run online_cp function on df with threshold set to 0.98
 ocp <- online_cp(df$constraint_flow, th_cp = 0.98)
 
+# Assigning results to ocp_summary
 ocp_summary <- summary(ocp)
 
+# Converting results table to a dataframe
 table <- as.data.frame(ocp_summary$result[[2]])
- 
+
+# Calculating Cohen's D and time in Months for each segment
 table <- table %>%
     mutate(
       Months = (as.numeric(as.duration(df$DateTime[table$end] -  df$DateTime[table$begin]) / ddays(1)))/30.44,
       CohenD = (abs(lag(mean) - mean)) / sqrt((SD^2 + lag(SD)^2)/2)
     )
-
+# Filtering out large changes, CohenD >= 2
 table2 <- table %>%
   mutate(
       LargeChange = case_when(
@@ -249,18 +305,84 @@ bins <- cut(x = 1:length(df[['constraint_flow']]), breaks = intervals,
 # Concat bins to original data
 df$Regime <- bins
 
+# Plot results
 plot = df %>%
   ggplot() + geom_line(aes(x = DateTime, y = constraint_flow, color = Regime)) + geom_line(aes(x = DateTime, y = rate_b), color = 'orange') + labs(x = 'Date', y = 'Constraint Flow')
 
+# Create summaty of regimes
 summary_table <- df %>% 
   group_by(Regime) %>%
   summarise("Regime Start" = min(DateTime), "Regime End" = max(DateTime), "Mean Constraint Flow" = mean(constraint_flow), "Standard Deviation" = sd(constraint_flow))
-      
-  return(list(plot = plot, summary = summary_table))
+   
+# Return list of outputs
+return(list(plot = plot, summary = summary_table))
       
 }
 ```
 
+#### Running the model from January 1, 2021 to January 1, 2022
+
+Running the model on this year of data returns only one regime as expected since the change hasn't started happening.
+
 ```{r}
-online_constraint_flow(df)
+df2 = df %>%
+  filter(
+    DateTime <= '2022-01-01'
+  )
 ```
+
+```{r, results= 'hide'}
+result <- online_constraint_flow(df2)
+```
+
+```{r}
+result$plot
+
+result$summary
+```
+
+#### Running the model from January 1, 2021 to February 1, 2022
+
+We see an upwards trend in constraint_flow, but it has not persisted long enough for it to be classified as a regime change. The client specified that this was actually desired because of the possibility of short blips happening. Short blips can be remedied until they come back down.
+
+```{r}
+df2 = df %>%
+  filter(
+    DateTime <= '2022-02-01'
+  )
+```
+
+```{r, results='hide'}
+result <- online_constraint_flow(df2)
+```
+
+```{r}
+result$plot
+
+result$summary
+```
+
+#### Running the model from January 1, 2021 to March 1, 2022
+
+Finally with the entire month of February processed, the model has identified a regime change. The model will also slightly back track and flag the change where it actually started in January, allowing our client to get a clear picture of when it occurred.
+
+```{r}
+df2 = df %>%
+  filter(
+    DateTime <= '2022-03-01'
+  )
+```
+
+```{r, results='hide'}
+result <- online_constraint_flow(df2)
+```
+
+```{r}
+result$plot
+
+result$summary
+```
+
+#### Suggested Actions
+
+With a clear indication that regime change is occurring, the utilities company can now work towards enhancing the stability of the appropriate power grid to accommodate this new-normal of power flow.
