--- a/Online Regime Change Detection.Rmd
+++ b/Online Regime Change Detection.Rmd
@@ -24,7 +24,7 @@ library(gt)
 
 # Introduction
 
-This analysis is my contribution to a larger Cal Poly MSBA capstone project in support of a large North American Utilities company. Our group was tasked with detecting significant changes in constraint flow beyond normal seasonality also known as **regime changes.** This model leverages an R package that uses Bayesian probabilities to detect changes in time-series data in real-time( a.k.a "online").
+This analysis is my contribution to a larger Cal Poly MSBA capstone project in support of a large North American Utilities company. Our group was tasked with detecting significant changes in constraint flow beyond normal seasonality also known as *regime changes***.** This model leverages an R package called [onlineBcp](https://cran.r-project.org/web/packages/onlineBcp/onlineBcp.pdf) that uses Bayesian probabilities to detect changes in time-series data in real-time( a.k.a "online").
 
 The data used in this demonstration is an extract of historical provided by the client for a single constraint. Any geographical labels or names have been removed to maintain confidentiality. Only the knitted html is available at the request of the client.
 
@@ -32,19 +32,7 @@ The data used in this demonstration is an extract of historical provided by the 
 
 In the context of a utilities company, constraints refer to limitations in the power grid, impacting its efficiency and reliability. These constraints can arise from transmission line capacity, generation limitations, network topology, and regulatory or market restrictions. When combined with the term "constraint flow," it refers to the flow of electricity through a constrained part of the power grid, which can be influenced by these factors. Power companies and grid operators work to mitigate these constraints, ensuring stable and cost-effective electricity delivery.
 
-Having a method to detect large changes in constraint flow can allow the utilities company to take proactive actions to maintain stability within the power grid instead of reacting when things begin to breakdown. If this change persists, then it is considered a regime change and the utilities company can work towards stabilizing the higher demand for power.
-
-#### Approach:
-
-1.  Import & clean the constraint data
-
-2.  Exploratory analysis
-
-3.  Create baseline with OnlineBcp package
-
-4.  Perform post-processing on OnlineBcp output to determine regime change
-
-5.  Visualize results and suggest appropriate actions
+Having a method to detect large, prolonged changes in constraint flow can allow the utilities company to take proactive actions to maintain stability within the power grid instead of reacting when things begin to breakdown. The utilities company can then work towards stabilizing the higher demand for power.
 
 # Import & Clean the Constraint Data
 
@@ -190,7 +178,7 @@ table <- table %>%
 table
 ```
 
-To find changes indicative of regime change, we are looking for changes that are greater than or equal to a D value of 2. If it meets that requirement, a new variable titled 'LargeChange' will be assigned to TRUE. By filtering the rows to where LargeChange is TRUE, we now get a table with the most significant changes and the rows they start on.
+To find changes indicative of regime change, we are looking for changes that are greater than or equal to a D value of 2. If it meets that requirement, a new variable titled 'LargeChange' will be assigned to TRUE. By filtering the rows to where 'LargeChange' is TRUE, we now get a table with the most significant changes and the rows they start on.
 
 ```{r}
 
@@ -322,7 +310,7 @@ return(list(plot = plot, summary = summary_table))
 
 #### Running the model from January 1, 2021 to January 1, 2022
 
-Running the model on this year of data returns only one regime as expected since the change hasn't started happening.
+Running the model on this period of data returns only one regime as expected since the change hasn't started happening.
 
 ```{r}
 df2 = df %>%
